--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.18"
+    "next": "14.2.18",
+    "gsap": "^3.12.5"
   },
   "devDependencies": {
     "typescript": "^5",
